# supabase-mcp

./: .env.example  .gitignore  .windsurfrules  Dockerfile  PLANNING.md  README.md  TASKS.md  config.json.example  pyproject.toml  requirements.txt
.cursor/: mcp.json
src/: config.py  db_types.py  server.py  sse.py  supabase_client.py
src/tools/: database.py
tests/: test_integration.py  test_server.py  test_types.py
