[tool.poetry]
name = "supabase-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Supabase database operations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
supabase = "^1.0.3"
psycopg2-binary = "^2.9.1"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
httpx = "^0.24.0"
fastmcp = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
